--- a/index.html
+++ b/index.html
@@ -1,169 +1,345 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="utf-8" />
-  <title>Zero-01 桌號 QR 碼（01–20）</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- QRCode.js -->
-  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
-  <!-- JSZip & FileSaver -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>點餐系統</title>
+
+  <!-- Firebase（compat 版） -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
+
   <style>
-    :root { --card-w: 360px; --gap: 16px; }
-    body { font-family: system-ui, -apple-system, "Segoe UI", "Noto Sans TC", Arial;
-           margin: 24px; color: #333; }
-    h1 { margin: 0 0 8px; }
-    .meta { color:#666; margin: 0 0 20px; font-size: 14px; }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(var(--card-w), 1fr));
-      gap: var(--gap);
+    :root { color-scheme: light; }
+    * { box-sizing: border-box; }
+    body { font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans TC",Arial;
+           margin:0; background:#f7f7f7; }
+    header { padding:16px; position:sticky; top:0; background:#f7f7f7; z-index:5; }
+    h1 { margin:0; color:#333; font-size:1.4rem; }
+    main { padding:0 16px 96px; }
+    h2 { color:#333; margin:16px 0 8px; font-size:1.1rem; }
+    .item { background:#fff; border:1px solid #e5e5e5; border-radius:12px;
+            padding:12px; margin:8px 0; box-shadow:0 2px 10px rgba(0,0,0,.04); }
+    .row { display:flex; align-items:center; gap:.6rem; flex-wrap:wrap; }
+    .name { font-weight:700; }
+    .price { color:#555; }
+    .qty { width:88px; }
+    .note { flex:1 1 220px; min-width:200px; }
+
+    .checkout-bar {
+      position:fixed; left:0; right:0; bottom:0; background:#fff; border-top:1px solid #e5e5e5;
+      padding:10px 12px; display:flex; align-items:center; gap:12px; z-index:10;
     }
-    .card {
-      border: 1px solid #e5e5e5; border-radius: 12px;
-      padding: 16px; background:#fff; box-shadow: 0 2px 10px rgba(0,0,0,.04);
-      display:flex; flex-direction:column; gap:10px;
+    .checkout-bar .sum { font-weight:900; font-size:1.1rem; }
+    .checkout-bar .muted { color:#666; font-size:.9rem; }
+    button.primary {
+      margin-left:auto; padding:.75rem 1.2rem; font-size:1rem; font-weight:700;
+      background:#0d6efd; color:#fff; border:0; border-radius:10px; cursor:pointer;
     }
-    .title { font-weight: 800; }
-    .qr { display:flex; align-items:center; justify-content:center; height: 240px; }
-    .url { font-size: 12px; color:#555; word-break: break-all; }
-    .actions { display:flex; gap:8px; flex-wrap: wrap; }
-    .btn {
-      font-size:12px; border:1px solid #e5e5e5; background:#f8f9fa; color:#333;
-      border-radius:8px; padding:6px 10px; cursor:pointer;
+    button.primary[disabled] { opacity:.6; cursor:not-allowed; }
+
+    .message { padding:10px 16px; min-height:1.25rem; font-weight:700; }
+    .ok { color:#0a7d39; } .err { color:#b3261e; } .info { color:#0b5ed7; }
+
+    .toast {
+      position:fixed; left:50%; bottom:80px; transform:translateX(-50%);
+      background:rgba(0,0,0,.85); color:#fff; padding:10px 14px; border-radius:10px;
+      font-size:.95rem; opacity:0; pointer-events:none; transition:opacity .25s;
+      z-index:100;
     }
-    .btn:hover { background:#eef1f4; }
-    .tip { font-size:12px; color:#888; }
-    @media print {
-      body { margin: 0; }
-      .grid { gap: 8px; }
-      .card { box-shadow: none; border: 1px solid #bbb; }
-      .actions { display:none; }
-      a { color: #000; text-decoration: none; }
-    }
+    .toast.show { opacity:1; }
+
+    .success { display:none; padding:24px; text-align:center; }
+    .success h3 { margin:0 0 8px; }
+    .success .code { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+                     background:#f1f3f5; border:1px dashed #cbd5e1; border-radius:8px;
+                     display:inline-block; padding:6px 10px; }
   </style>
 </head>
 <body>
-  <h1>Zero-01 桌號 QR 碼（01–20）</h1>
-  <p class="meta">
-    列印建議：A4、直向、邊界正常、彩色或黑白皆可。<br />
-    產生時間：<span id="ts"></span>
-  </p>
+  <header><h1>📋 手機點餐</h1></header>
 
-  <!-- 新增下載全部按鈕 -->
-  <div style="margin-bottom: 16px;">
-    <button class="btn" id="regen">重新產生 QR</button>
-    <button class="btn" id="download-all">下載全部 ZIP</button>
+  <main>
+    <div id="menu"></div>
+    <div id="msg" class="message info"></div>
+
+    <section id="success" class="success">
+      <h3>✅ 訂單已送出</h3>
+      <p>您的訂單編號：</p>
+      <p class="code" id="orderId">—</p>
+      <p style="margin-top:8px;">請保持頁面或出示此畫面給服務人員。</p>
+      <!-- 回到點餐並保留當前 ?table= -->
+      <button class="primary" onclick="location.href = location.pathname + location.search">回到點餐</button>
+    </section>
+  </main>
+
+  <div class="checkout-bar" id="checkoutBar">
+    <div class="sum" id="total">合計金額：$0</div>
+    <div class="muted" id="tableInfo"></div>
+    <button class="primary" id="submitBtn" disabled>送出訂單</button>
   </div>
 
-  <div class="grid" id="grid"></div>
+  <div class="toast" id="toast"></div>
 
   <script>
-    const START_TABLE = 1;
-    const END_TABLE   = 20;
-    const BASE_URL = "https://n126look.github.io/Zero-01/";
-    const EXTRA_PARAMS = {};
-
-    document.getElementById('ts').textContent =
-      new Date().toLocaleString('zh-TW', { hour12:false });
-
-    const grid = document.getElementById('grid');
-
-    function normalizeBase(url) {
-      if (/index\.html?$/.test(url)) return url;
-      return url.endsWith('/') ? url : (url + '/');
+    // ========= 基本工具 =========
+    const $ = (id) => document.getElementById(id);
+    const fmt = new Intl.NumberFormat('zh-TW');
+    function showToast(text, ms=1600) {
+      const t = $("toast"); t.textContent = text; t.classList.add("show");
+      setTimeout(()=> t.classList.remove("show"), ms);
     }
 
-    function buildUrl(tableStr) {
-      const base = normalizeBase(BASE_URL);
-      const u = new URL(base, location.origin);
-      u.searchParams.set('table', tableStr);
-      for (const [k, v] of Object.entries(EXTRA_PARAMS)) {
-        u.searchParams.set(k, v);
+    // ========= 狀態 =========
+    const qs = new URLSearchParams(location.search);
+    const currentTable = qs.get("table") || "01";
+    $("tableInfo").textContent = `桌號：${currentTable}`;
+    const STORAGE_KEY = `cart_${currentTable}`;
+    const state = { source: null, menu: {}, submitting: false };
+
+    // 有效 session id（通過開桌檢查後取得）
+    let ACTIVE_SESSION_ID = null;
+
+    // ========= Firebase 設定 =========
+    const firebaseConfig = {
+      apiKey: "AIzaSyDaC14zf1ZxOsd-twyjzSgTIcNBwty1Is",
+      authDomain: "zero-01-17457.firebaseapp.com",
+      projectId: "zero-01-17457",
+      storageBucket: "zero-01-17457.appspot.com",
+      messagingSenderId: "534119998616",
+      appId: "1:534119998616:web:ec3b6c2d48318f9c51ced",
+      databaseURL: "https://zero-01-17457-default-rtdb.asia-southeast1.firebasedatabase.app"
+    };
+
+    let db = null;
+    try { firebase.initializeApp(firebaseConfig); db = firebase.database(); }
+    catch(e){ console.warn("Firebase 初始化失敗，改用 JSON 備援：", e); }
+
+    // ========= 菜單來源控制 =========
+    const MENU_VER = "2025-08-11-01";                 // 每次改價換新版本
+    const MENU_URL = `menu_items.json?v=${MENU_VER}`; // 避免快取
+    const sourceOverride = qs.get("source");          // ?source=json 可強制用 JSON
+
+    // ========= 開桌 session 檢查（重要） =========
+    async function checkSession() {
+      // JSON 模式或本地測試時可放行（沒有 db）
+      if (!db) return true;
+
+      try {
+        const snap = await db.ref(`tables/${currentTable}/session`).once("value");
+        const sess = snap.val();
+        if (!sess || !sess.id || !sess.expiresAt || Number(sess.expiresAt) <= Date.now()) {
+          $("msg").className = "message err";
+          $("msg").textContent = "此桌尚未開桌或已結帳，請洽服務人員。";
+          $("submitBtn").disabled = true;
+          return false;
+        }
+        ACTIVE_SESSION_ID = String(sess.id);
+        return true;
+      } catch (e) {
+        $("msg").className = "message err";
+        $("msg").textContent = "讀取桌況失敗，請稍後重試或洽服務人員。";
+        $("submitBtn").disabled = true;
+        return false;
       }
-      return u.toString();
     }
 
-    function downloadCanvasAsPng(canvas, filename){
-      const link = document.createElement('a');
-      link.download = filename;
-      link.href = canvas.toDataURL('image/png');
-      link.click();
-    }
+    // ========= 讀菜單（Firebase 優先，失敗/覆蓋則用 JSON）=========
+    async function loadMenu() {
+      $("msg").className = "message info";
+      $("msg").textContent = "正在載入菜單…";
 
-    function generateQRs() {
-      grid.innerHTML = "";
-      for (let t = START_TABLE; t <= END_TABLE; t++) {
-        const tableStr = String(t).padStart(2, '0');
-        const url = buildUrl(tableStr);
-
-        const card = document.createElement('div');
-        card.className = 'card';
-        card.innerHTML = `
-          <div class="title">桌號 ${tableStr}</div>
-          <div class="qr" id="qr-${tableStr}"></div>
-          <div class="url"><a href="${url}" target="_blank" rel="noopener">${url}</a></div>
-          <div class="actions">
-            <button class="btn" data-dl="${tableStr}">下載 PNG</button>
-            <a class="btn" href="${url}" target="_blank" rel="noopener">開啟測試</a>
-          </div>
-          <div class="tip">請用相機掃描 QR 即可開始點餐</div>
-        `;
-        grid.appendChild(card);
-
-        const qrWrap = document.getElementById(`qr-${tableStr}`);
-        const qr = new QRCode(qrWrap, {
-          text: url,
-          width: 220,
-          height: 220,
-          correctLevel: QRCode.CorrectLevel.H
-        });
-
-        card.querySelector(`[data-dl="${tableStr}"]`).addEventListener('click', () => {
-          const cvs = qrWrap.querySelector('canvas');
-          const img = qrWrap.querySelector('img');
-          if (cvs) {
-            downloadCanvasAsPng(cvs, `table_${tableStr}.png`);
-          } else if (img) {
-            const canvas = document.createElement('canvas');
-            canvas.width = img.naturalWidth;
-            canvas.height = img.naturalHeight;
-            const ctx = canvas.getContext('2d');
-            ctx.drawImage(img, 0, 0);
-            downloadCanvasAsPng(canvas, `table_${tableStr}.png`);
+      if (db && sourceOverride !== "json") {
+        try {
+          const snap = await db.ref("menu_items").once("value");
+          const data = snap.val();
+          if (data && Object.keys(data).length) {
+            state.source = "firebase";
+            state.menu = data;
+            renderMenu(data);
+            restoreCart();
+            updateTotal();
+            $("msg").textContent = "";
+            return;
           }
-        });
+        } catch(err){ console.warn("讀取 Firebase 失敗：", err); }
+      }
+
+      try {
+        const res = await fetch(MENU_URL, { cache: "no-store" });
+        if(!res.ok) throw new Error(`HTTP ${res.status}`);
+        const data = await res.json();
+        state.source = "json";
+        state.menu = data;
+        renderMenu(data);
+        restoreCart();
+        updateTotal();
+        $("msg").textContent = "（目前為離線/JSON 模式）";
+      } catch(err){
+        $("msg").className = "message err";
+        $("msg").textContent = `⚠️ 無法取得菜單：${err.message}`;
       }
     }
 
-    async function downloadAllAsZip() {
-      const zip = new JSZip();
-      for (let t = START_TABLE; t <= END_TABLE; t++) {
-        const tableStr = String(t).padStart(2, '0');
-        const url = buildUrl(tableStr);
-        const canvas = document.createElement('canvas');
-        const qrTemp = new QRCode(canvas, {
-          text: url,
-          width: 220,
-          height: 220,
-          correctLevel: QRCode.CorrectLevel.H
+    // ========= 渲染菜單 =========
+    function renderMenu(raw){
+      const menu = $("menu");
+      menu.innerHTML = "";
+      const grouped = {};
+      Object.entries(raw).forEach(([id, item])=>{
+        (grouped[item.category || "其他"] ||= []).push({ ...item, id });
+      });
+
+      Object.entries(grouped).forEach(([cat, items])=>{
+        const h = document.createElement("h2"); h.textContent = cat; menu.appendChild(h);
+        items.forEach(item=>{
+          const card = document.createElement("div");
+          card.className = "item";
+          card.innerHTML = `
+            <div class="row">
+              <span class="name">${item.name}</span>
+              <span class="price">＄${fmt.format(Number(item.price)||0)}</span>
+              <label>數量：
+                <input class="qty" type="number" inputmode="numeric" pattern="[0-9]*"
+                       min="0" value="0" id="qty-${item.id}">
+              </label>
+              ${item.enable_note ? `
+                <input class="note" type="text" id="note-${item.id}" placeholder="備註（可留空）">` : ""}
+            </div>
+          `;
+          menu.appendChild(card);
+
+          const qtyEl = card.querySelector(`#qty-${item.id}`);
+          qtyEl.addEventListener("input", ()=>{ clampQty(qtyEl); updateTotal(); saveCart(); });
+          const noteEl = card.querySelector(`#note-${item.id}`);
+          if (noteEl) noteEl.addEventListener("change", saveCart);
         });
-        await new Promise(r => setTimeout(r, 50)); // 等 QR 繪製
-        const dataUrl = canvas.querySelector('canvas').toDataURL('image/png');
-        const imgData = dataUrl.split(',')[1];
-        zip.file(`table_${tableStr}.png`, imgData, { base64: true });
-        canvas.innerHTML = "";
-      }
-      zip.generateAsync({ type: "blob" }).then(content => {
-        saveAs(content, "all_tables.zip");
       });
     }
 
-    document.getElementById('regen').addEventListener('click', generateQRs);
-    document.getElementById('download-all').addEventListener('click', downloadAllAsZip);
+    function clampQty(el){
+      const v = parseInt(el.value || "0", 10);
+      if (isNaN(v) || v < 0) el.value = 0;
+      // 可視需求設上限：if (v > 99) el.value = 99;
+    }
 
-    generateQRs();
+    // ========= 暫存（依桌號分開）=========
+    function saveCart(){
+      const data = {};
+      Object.keys(state.menu).forEach(id=>{
+        const qEl = $(`qty-${id}`);
+        const nEl = $(`note-${id}`);
+        if (!qEl) return;
+        const qty = parseInt(qEl.value||"0",10)||0;
+        const note = nEl ? (nEl.value||"") : "";
+        if (qty>0 || note) data[id] = { qty, note };
+      });
+      localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
+    }
+
+    function restoreCart(){
+      try{
+        const raw = localStorage.getItem(STORAGE_KEY);
+        if(!raw) return;
+        const cart = JSON.parse(raw);
+        Object.entries(cart).forEach(([id, {qty, note}])=>{
+          const qEl = $(`qty-${id}`); if (qEl) qEl.value = qty;
+          const nEl = $(`note-${id}`); if (nEl && note) nEl.value = note;
+        });
+      }catch{}
+    }
+
+    // ========= 統一的總價計算 =========
+    function calcTotal(){
+      let total = 0;
+      Object.keys(state.menu).forEach(id=>{
+        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
+        if (q>0) total += (Number(state.menu[id].price)||0) * q;
+      });
+      return total;
+    }
+
+    // ========= 計算總價 & 控制送出鈕 =========
+    function updateTotal(){
+      const total = calcTotal();
+      let count = 0;
+      Object.keys(state.menu).forEach(id=>{
+        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
+        count += q;
+      });
+      $("total").textContent = `合計金額：$${fmt.format(total)}${count?`（${count} 項）`:""}`;
+      $("submitBtn").disabled = (count === 0) || state.submitting;
+    }
+
+    // ========= 送出訂單 =========
+    $("submitBtn").addEventListener("click", async ()=>{
+      if (state.submitting) return;
+      state.submitting = true; updateTotal();
+
+      const items = [];
+      Object.keys(state.menu).forEach(id=>{
+        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
+        if (q>0){
+          const note = $(`note-${id}`)?.value?.trim() || "";
+          items.push({
+            id, name: state.menu[id].name,
+            price: Number(state.menu[id].price)||0, quantity: q, note
+          });
+        }
+      });
+
+      if (items.length === 0){
+        showToast("請先選擇餐點");
+        state.submitting = false; updateTotal(); return;
+      }
+
+      const total = calcTotal();
+
+      // 帶入 sessionId，供 Rules 驗證
+      const order = {
+        table: currentTable,
+        sessionId: ACTIVE_SESSION_ID || null, // JSON 模式時可能為 null
+        time: new Date().toISOString(),
+        items,
+        total
+      };
+
+      const btn = $("submitBtn");
+      const oldText = btn.textContent;
+      btn.textContent = "送出中…";
+      btn.disabled = true;
+
+      if (state.source === "firebase" && db){
+        try{
+          const ref = await db.ref("orders").push(order);
+          localStorage.removeItem(STORAGE_KEY);
+          $("msg").className = "message ok";
+          $("msg").textContent = "";
+          $("success").style.display = "block";
+          $("orderId").textContent = ref.key || "(未知編號)";
+          $("checkoutBar").style.display = "none";
+          $("menu").style.display = "none";
+          showToast("訂單已送出");
+        }catch(err){
+          $("msg").className = "message err";
+          $("msg").textContent = `⚠️ 訂單送出失敗：${err.message}`;
+          showToast("送出失敗，請重試");
+          state.submitting = false; btn.textContent = oldText; updateTotal();
+        }
+      } else {
+        console.log("（JSON 模式）僅前端記錄：", order);
+        $("msg").className = "message ok";
+        $("msg").textContent = "✅ 已記錄您的選擇（目前為離線/JSON 模式）";
+        showToast("已記錄您的選擇");
+        state.submitting = false; btn.textContent = oldText; updateTotal();
+      }
+    });
+
+    // ========= 啟動：先檢查開桌，再載菜單 =========
+    (async () => {
+      const ok = await checkSession();   // 先做桌況驗證
+      if (ok) loadMenu();
+    })();
   </script>
 </body>
 </html>
